--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "axios": "^0.21.4",
     "framer-motion": "^4",
     "json-server": "^0.16.3",
+    "postcss-safe-parser": "^6.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.6.0",
     "react-player": "^2.9.0",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "styled-components": "^5.3.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
