fix: config code

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-async-generator-functions": "^7.20.7",
     "@types/react-router-dom": "^5.1.8",
     "@types/styled-components": "^5.1.14"
   }
