--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@vercel/analytics": "^1.0.1",
     "axios": "^0.21.4",
     "framer-motion": "^4",
     "json-server": "^0.16.3",
