--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "rubel",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "18.x"
+  },
   "dependencies": {
     "@chakra-ui/react": "^1.6.7",
     "@emotion/react": "^11",
@@ -21,7 +24,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.6.0",
-    "react-player": "^2.9.0",
+    "react-player": "^2.12.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^5.0.1",
     "styled-components": "^5.3.1",
